# gimme_ai

./: .coverage  .env  .env.example  .gimme-config.json  .gitignore  .python-version  CLAUDE.md  DOCS.md  PRODUCTION_READY_SETUP.md  README.md  TESTING_RESULTS.md  build_output.txt  debug.py  package-lock.json  package.json  pyproject.toml  pytest.ini  setup_r2_test.py  test_comprehensive.py  test_end_to_end.py  test_live_api_validation.py  test_multi_api_r2.yaml  test_simple.py  test_simple_validation.py  test_workflow_validation.py  workflow-config.json
debug_output/: durable_objects.js  worker.js  workflow.js  wrangler.toml  wrangler.toml.template  wrangler_context.json
derivativ_integration/: CLOUDFLARE_WORKFLOWS_RESEARCH.md  COPY_INSTRUCTIONS.md  QUICK_REFERENCE.md  README.md
derivativ_integration/reference_code/: yaml_config_parser.py
derivativ_integration/templates/: parallel_question_generation.yaml  simple_api_test.yaml
docs_archive/: SETUP_GUIDE.md
docs_archive/derivativ_integration/: GIMME_AI_ENHANCEMENT_REQUIREMENTS.md  GIMME_AI_INTEGRATION_GUIDE.md  IMPLEMENTATION_GUIDE.md
examples/: basic_workflow.yaml  content_creation_workflow.yaml  derivativ_simulation.yaml  live_multi_api_test.yaml  parallel_workflow.yaml  tiktok_content_pipeline.yaml  user_transform_example.py
gimme_ai/: __init__.py
gimme_ai/cli/: __init__.py  commands.py  commands_deploy.py  commands_init.py  commands_secrets.py  commands_test.py  commands_workflow.py  commands_workflow_new.py
gimme_ai/config/: __init__.py  derivativ_templates.py  schema.py  secrets.py  workflow.py
(+63 files in other folders)
