[tool.poetry]
name = "gimme-ai"
version = "0.1.0"
description = "Secure API gateway management for AI services"
authors = ["Chen Enjiao (Ernie) <hello@ernie.sg>"]
license = "MIT"
readme = "README.md"
packages = [{include = "gimme_ai"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
click = ">=8.1.8,<9.0.0"
typer = ">=0.15.2,<0.16.0"
pydantic = ">=2.10.6,<3.0.0"
python-dotenv = ">=1.0.1,<2.0.0"
inquirer = ">=3.4.0,<4.0.0"
requests = ">=2.32.3,<3.0.0"
jinja2 = ">=3.1.6,<4.0.0"
tabulate = "^0.9.0"
responses = "^0.25.7"
boto3 = "^1.38.43"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.10.0"
pylint = "^2.17.0"
black = "^23.3.0"
mypy = "^1.3.0"
pytest-asyncio = "0.23.8"

[tool.poetry.scripts]
gimme-ai = "gimme_ai.cli.commands:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
